--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,6 +18,8 @@ jobs:
         sudo add-apt-repository -y ppa:neovim-ppa/${{ matrix.ppa-version }}
         sudo apt-get update
         sudo apt-get install -yqq --no-install-recommends neovim scdoc lua-busted
+    - name: Show neovim version
+      run: nvim --version
     - name: Run the test suite
       run: script -ec "make test"
       env:
@@ -32,6 +34,8 @@ jobs:
         brew update
         brew install neovim scdoc luarocks
         luarocks --local install busted
+    - name: Show neovim version
+      run: nvim --version
     - name: Run the test suite
       run: script typescript make test BUSTED="$HOME/.luarocks/bin/busted --exclude-tags=osx_pending"
       env:
@@ -39,11 +43,18 @@ jobs:
 
   nix:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version:
+          - stable
+          - nightly
     steps:
     - name: Install Nix
       uses: cachix/install-nix-action@v16
     - uses: actions/checkout@v2
+    - name: Show neovim version
+      run: nvim --version
     - name: Run the test suite
-      run: script -ec "nix develop --check"
+      run: script -ec "nix develop .\#${{ matrix.version }} --check"
       env:
         TERM: dumb
